--- a/index.css
+++ b/index.css
@@ -124,9 +124,11 @@ footer{
 }
 
 body{
-    background-size: auto;
-    background-position: center center;
+    height: 100vh;
+    background-size: contain;
+    background-repeat: cover;
     background-image: url(IMG-20220616-WA0010-G.jpg);
+    background-attachment: fixed;
     
 }
 
