--- a/index.css
+++ b/index.css
@@ -84,9 +84,9 @@ main{
     box-shadow: inset;
 }
 
-main p{
-    padding: 5px;
-    margin: 5px;
+main  p{
+    padding: 10px;
+    margin: 10px;
     text-align: justify;
     text-indent: 30px;
     line-height: 1.2em;
@@ -97,14 +97,19 @@ main p{
 
 main h1{
     padding-top: 10px;
+    margin: 10px;
     font-family: var(--font-Android);
     text-align: center;
 }
 
 main h3{
     padding: 15px;
+    margin: 10px;
     text-align: center;
     color: black;
+    font-family: var(--font-Android);
+    font-weight: bolder;
+    font-size: larger;
 }
 
 header{
@@ -132,10 +137,11 @@ body{
     
 }
 
-#dialogo{
-    text-align: center;
+.dialogo{
+    text-align: auto;
     text-indent: 0px;
-    padding-bottom: 5px;
-    font-weight: bolder;
+    font-size: 1em;
+    font-weight:bolder ;
+
 }
 
