--- a/projeto-menu/index.css
+++ b/projeto-menu/index.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-image: url(../../Html-Css/desafios/projeto-cordel/imagens/ROG-Flow-X16-scenario-photo-gaming-with-Xbox-controller-in-tent-mode.webp);
+    background-image: url(ROG-Flow-X16-scenario-photo-gaming-with-Xbox-controller-in-tent-mode.webp);
     background-position: center center;
     background-attachment: fixed;
     min-width: auto;
