--- a/projeto-menu/index.css
+++ b/projeto-menu/index.css
@@ -30,6 +30,14 @@ h1{
 
 }
 
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+    font-size: 1vw;
+}
+
 .menu{
     box-shadow: 1px 2px 2px rgba(85, 6, 85, 0.651);
 }
